#84 Fixed text spacing

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -344,7 +344,7 @@ p:last-child {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 65%;
+  width: 70%;
   font-size: 60px;
   font-family: PxGrotesk;
   text-align: center;
